Sidebars now going down to footer, and card table spacing is correct with buttons at bottom and evenly spaced out.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+
 body {
     display: flex;
     min-height: 100vh;
@@ -43,10 +44,14 @@ main {
     
   }
 
-#cards-placeholder {
+#card-table {
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
+
+
 
 .where-cards-dealt {
   display: flex;
